--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
-[package]
-name = "cli_chat"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver="1"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+    "client",
+    "server",
+]
 
-[dependencies]
