--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,5 @@ protocol = { path = "../protocol" }
 home = "0.5.4"
 sha256 = "1.4.0"
 lazy_static = "1.4"
+ratatui = "0.24.0"
+crossterm = "0.27.0"
