--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,3 +12,7 @@ sha256 = "1.4.0"
 lazy_static = "1.4"
 ratatui = "0.24.0"
 crossterm = "0.27.0"
+anyhow = "1.0.71"
+better-panic = "0.3.0"
+itertools = "0.12.0"
+unicode-width = "0.1.11"
